# solveig

./: .codecov.yml  .gitignore  README.md  config.py  llm.py  main.py  messages.py  pyproject.toml  requirements.txt  schemas.py  setup.py  setup.sh  system_prompt.py  test_interface.py
.github/workflows/: cd.yml  ci.yml  publish.yml  python-app.yml  run-tests.yml
docs/: about.md  comparison.md  contributing.md  plugins.md  usage.md
docs/themes/: themes.md
plugins/hooks/: __init__.py  shellcheck.py
schema/: message.py  requirement.py
scripts/: __init__.py  async_run.py  init.py  run.py  solveig_cli.py  solveig_init.py
solveig/: __init__.py  config.py  config_editor.py  exceptions.py  llm.py  main.py  run.py  subcommand.py  system_prompt.py
solveig/config/: __init__.py  config.py  editor.py
solveig/interface/: __init__.py  async_cli.py  base.py  cli.py  cli_simple.py  cli_textual.py  core.py  simple_cli.py  textual_interface.py  themes.py
solveig/llm/: __init__.py  api.py  request_manager.py
solveig/plugins/: __init__.py  exceptions.py  utils.py
solveig/schema/: __init__.py  base.py  dynamic.py  message.py  requirement.py  result.py
solveig/scripts/: __init__.py
solveig/sessions/: manager.py
solveig/subcommand/: __init__.py  base.py  runner.py
solveig/system_prompt/: __init__.py
solveig/utils/: __init__.py  file.py  filesystem.py  misc.py  shell.py
tests/: __init__.py  conftest.py  test_utils.py
tests/end_to_end/: test_conversation_flow.py  test_conversation_loop.py
tests/integration/: __init__.py  test_conversation_loop.py  test_file_operations.py  test_http_tool.py  test_message_history.py  test_plugin_hooks.py  test_plugin_tools.py  test_requirements.py  test_sessions.py  test_subcommand_runner.py  test_tree_plugin.py
tests/mocks/: __init__.py  file.py  filesystem.py  interface.py  llm_client.py  run_mock.py  run_with_mock_client.py
tests/plugins/: __init__.py  test_shellcheck.py  test_tree.py  test_tree_plugin.py
tests/system/: __init__.py  test_conversation_loop.py
utils/: file.py  formatting.py  misc.py
(+108 files in other folders)
